--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -13,11 +13,11 @@ error_log      /dev/stdout;
 # worker_rlimit_nofile 8192;
 
 daemon off;
- 
+
 events {
   worker_connections  1024;
 }
- 
+
 http {
   include    nginx/mime.types;
   index      index.html index.htm;
@@ -31,51 +31,25 @@ http {
   sendfile     on;
   tcp_nopush   on;
   # server_names_hash_bucket_size 128; # this seems to be required for some vhosts
- 
+
   upstream backend {
     server unix:<%= VAR %>/web.sock;
   }
-  upstream monit {
-    server localhost:5500;
+
+  server {
+    set $root <%= ROOT %>;
+    listen 8080;
+    include nginx/server.conf;
   }
 	
   server {
-    listen 8080;
-    
-    # listen               8443;
-    # ssl                  on;
-    # ssl_certificate      ${{SSL_CERT}};
-    # ssl_certificate_key  ${{SSL_KEY}};
+    set $root <%= ROOT %>;
+    listen               8443;
+    ssl                  on;
+    ssl_certificate      <%= VAR %>/openssl/certs/localhost.pem;
+    ssl_certificate_key  <%= VAR %>/openssl/private/localhost.pem;
     # keepalive_timeout    70;
-    # 
-    # include nginx/server.conf;
-
-    # serve static files
-    # location ~ ^/(images|javascript|js|css|flash|media|static)/  {
-    #   root    <%= ROOT %>/var/www/virtual/big.server.com/htdocs;
-    #   expires 30d;
-    # }
-
-    location /monit/ {
-      rewrite  ^/monit/(.*)  /$1 break;
-      proxy_pass http://localhost:5500;
-      
-      # proxy_set_header X-Real-IP $remote_addr;
-      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      # proxy_set_header Host something.appspot.com;
-      # proxy_set_header X-NginX-Proxy true;
-      # proxy_pass https://ssl_api/;
-      # proxy_ssl_session_reuse off;
-      # proxy_redirect off;
-    }
-    
-    location / {
-      root           <%= ROOT %>/public;
-      try_files $uri @backend;
-    }
-
-    location @backend {
-      proxy_pass http://backend;
-    }
+    #
+    include nginx/server.conf;
   }
 }
