--- a/config/monitrc.erb
+++ b/config/monitrc.erb
@@ -5,7 +5,8 @@ set httpd port 5500 and use address localhost allow localhost
 
 <% Procfile.each("Procfile") do |group, name, cmd, port| %>
 check process <%= name %> with pidfile <%= PIDDIR %>/<%= name %>.pid
-    start program = "<%= DAEMON %> -N --name <%= name %> --pidfiles <%= PIDDIR %> -- env PORT=<%= port %> <%= BUNDLE %> exec <%= cmd %>" with timeout 60 seconds
-    stop program = "<%= DAEMON %> -N --name <%= name %> --pidfiles <%= PIDDIR %> --stop"
-    group <%= group %>
+  <% daemon = "#{DAEMON} -N --name #{name} --pidfiles #{PIDDIR} --output #{LOGDIR}/#{group}.log" %>
+  start program = "<%= daemon %> -- env PORT=<%= port %> <%= BUNDLE %> exec <%= cmd %>" with timeout 60 seconds
+  stop program = "<%= daemon %> --stop"
+  group <%= group %>
 <% end %>
