--- a/config/monitrc.erb
+++ b/config/monitrc.erb
@@ -1,7 +1,11 @@
 <%
-  def which(name)
-    `which #{name}`.chomp
+  def which(*names)
+    names.map do |name|
+      `which #{name}`.chomp
+    end
   end
+
+  daemon, sshd, nginx = which :daemon, :sshd, :nginx
 
   def log(process)
     # "#{ROOT}/var/log/#{process}.log"
@@ -16,13 +20,17 @@ set daemon 10
 set httpd port 5500 and use address localhost allow localhost
 
 check process web with pidfile <%= var %>/pids/web.pid
-  start program = "<%= which :daemon %> -N --name web --pidfiles <%= var %>/pids --output <%= log :web %> -- <%= bundle %> exec puma -b unix:<%= var %>/web.sock" with timeout 60 seconds
-  stop program = "<%= which :daemon %> -N --name web --pidfiles <%= var %>/pids --output <%= log :web %> --stop"
+  start program = "<%= daemon %> -N --name web --pidfiles <%= var %>/pids --output <%= log :web %> -- <%= bundle %> exec puma -b unix:<%= var %>/web.sock" with timeout 60 seconds
+  stop program = "<%= daemon %> -N --name web --pidfiles <%= var %>/pids --output <%= log :web %> --stop"
+
+check process checker with pidfile <%= var %>/pids/checker.pid
+  start program = "<%= daemon %> -N --name checker --pidfiles <%= var %>/pids --output <%= log :checker %> -- <%= bundle %> exec rake run:check" with timeout 60 seconds
+  stop program = "<%= daemon %> -N --name checker --pidfiles <%= var %>/pids --output <%= log :checker %> --stop"
 
 check process sshd with pidfile <%= var %>/pids/sshd.pid
-  start program = "<%= which :daemon %> -N --name sshd --pidfiles <%= var %>/pids --output <%= log :sshd %> -- <%= which :sshd %> -D -e -f <%= var %>/config/sshd.conf" with timeout 60 seconds
-  stop program = "<%= which :daemon %> -N --name sshd --pidfiles <%= var %>/pids --output <%= log :sshd %> --stop"
+  start program = "<%= daemon %> -N --name sshd --pidfiles <%= var %>/pids --output <%= log :sshd %> -- <%= sshd %> -D -e -f <%= var %>/config/sshd.conf" with timeout 60 seconds
+  stop program = "<%= daemon %> -N --name sshd --pidfiles <%= var %>/pids --output <%= log :sshd %> --stop"
 
 check process nginx with pidfile <%= var %>/pids/nginx.pid
-  start program = "<%= which :daemon %> -N --name nginx --pidfiles <%= var %>/pids --output <%= log :nginx %> -- <%= which :nginx %> -c <%= var %>/config/nginx.conf " with timeout 60 seconds
-  stop program = "<%= which :daemon %> -N --name nginx --pidfiles <%= var %>/pids --output <%= log :nginx %> --stop"
+  start program = "<%= daemon %> -N --name nginx --pidfiles <%= var %>/pids --output <%= log :nginx %> -- <%= nginx %> -c <%= var %>/config/nginx.conf " with timeout 60 seconds
+  stop program = "<%= daemon %> -N --name nginx --pidfiles <%= var %>/pids --output <%= log :nginx %> --stop"
