Check that the user can use sudo when needed, fixes #10

--- a/config/monitrc.erb
+++ b/config/monitrc.erb
@@ -11,6 +11,16 @@
   daemon, sshd, nginx, _sudo = which :daemon, :sshd, :nginx, :sudo
 
   if (HTTP_PORT && HTTP_PORT < 1024) || (HTTPS_PORT && HTTPS_PORT < 1024)
+    # try to run nginx via sudo. This will ask for a password via /bin/false
+    # if the user cannot run sudo.
+    system "SUDO_ASKPASS=/bin/false #{_sudo} -A #{nginx} -v"
+
+    if $?.exitstatus != 0
+      UI.error "To use privileged HTTP/S ports you must be allowed to run nginx via sudo."
+      UI.warn "Fix that by adding the following line via visudo:"
+      UI.warn "\n#{`whoami`.chomp} ALL=NOPASSWD: #{nginx}"
+      exit 1
+    end
     nginx = "#{_sudo} #{nginx}"
   end
   # log destinations. The access_log is the log destination for everything which is not
