Fix foreman configuration
Foreman can be used to start a development instance.

--- a/config/monitrc.erb
+++ b/config/monitrc.erb
@@ -32,6 +32,8 @@
     end
     nginx = "#{_sudo} #{nginx}"
     nginx_daemon = "#{_sudo} #{daemon}"
+  else
+    nginx_daemon = "#{daemon}"
   end
 
   bundle = "#{ROOT}/script/bundle"
