--- a/config/sshd.conf.erb
+++ b/config/sshd.conf.erb
@@ -110,7 +110,7 @@ GatewayPorts yes
 #ClientAliveInterval 0
 #ClientAliveCountMax 3
 #UseDNS yes
-#PidFile <%= SSHD.path("sshd.pid") %>
+PidFile <%= SSHD.path("sshd.pid") %>
 #MaxStartups 10
 #PermitTunnel no
 #ChrootDirectory none
