--- a/config/redis.conf.erb
+++ b/config/redis.conf.erb
@@ -18,11 +18,11 @@ daemonize no
 
 # When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile /usr/local/var/run/redis.pid
+pidfile <%= VAR %>/pids/redis.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 6379
+port 0
 
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for incoming connections.
@@ -33,8 +33,8 @@ bind 127.0.0.1
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
-# unixsocket /tmp/redis.sock
-# unixsocketperm 755
+unixsocket <%= VAR %>/sockets/redis.socket
+unixsocketperm 755
 
 # Close the connection after a client is idle for N seconds (0 to disable)
 timeout 0
@@ -53,7 +53,7 @@ timeout 0
 # On other kernels the period depends on the kernel configuration.
 #
 # A reasonable value for this option is 60 seconds.
-tcp-keepalive 0
+tcp-keepalive 60
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -150,7 +150,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /usr/local/var/db/redis/
+dir <%= VAR %>/redis
 
 ################################# REPLICATION #################################
 
@@ -313,6 +313,7 @@ slave-priority 100
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 # maxmemory <bytes>
+maxmemory 10mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
