--- a/config/monitrc.erb
+++ b/config/monitrc.erb
@@ -43,7 +43,7 @@ set daemon 10
 set httpd port <%= MONIT_PORT %> and use address localhost allow localhost
 
 check process web with pidfile <%= VAR %>/pids/web.pid
-  <% command = "#{bundle} exec puma -b unix:#{VAR}/web.sock" %>
+  <% command = "#{bundle} exec thin -S #{VAR}/web.sock" %>
   start program = "<%= daemon %> -N --name web --pidfiles <%= VAR %>/pids -- <%= command %>" with timeout 60 seconds
   stop program = "<%= daemon %> -N --name web --pidfiles <%= VAR %>/pids --stop"
 
@@ -51,6 +51,11 @@ check process checker with pidfile <%= VAR %>/pids/checker.pid
   <% command = "#{bundle} exec rake run:check" %>
   start program = "<%= daemon %> -N --name checker --pidfiles <%= VAR %>/pids -- <%= command %>" with timeout 60 seconds
   stop program = "<%= daemon %> -N --name checker --pidfiles <%= VAR %>/pids --stop"
+
+check process metric_system with pidfile <%= VAR %>/pids/metric_system.pid
+  <% command = "#{bundle} exec script/metric_system" %>
+  start program = "<%= daemon %> -N --name metric_system --pidfiles <%= VAR %>/pids -- <%= command %>" with timeout 60 seconds
+  stop program = "<%= daemon %> -N --name metric_system --pidfiles <%= VAR %>/pids --stop"
 
 # [todo] terminate connections
 #
