Fixes index page

--- a/app/controllers/info.erb
+++ b/app/controllers/info.erb
@@ -5,7 +5,7 @@
 # Note: You can source this server's configuration into your shell by running
 # something like
 #
-#   source /dev/stdin  <<< "$(curl -k #{request.url})"
+#   source /dev/stdin  <<< "$(curl -k <%= request.url %>)"
 #
 # == About pipe2me ================================================================
 #
